[package]
name = "dirustic"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["voice"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
reqwest = "0.12.15"
symphonia = { version = "0.5.2", features = [
  'pcm',
  'mp3',
  'wav',
  'isomp4',
  'aac',
  'alac',
] }
dotenv = "0.15.0"
